...
                    modifier = Modifier
                        .fillMaxWidth()
                        .aspectRatio(2f)
                        .testTag("IdleTranslateTextField")
                )
            } else {
                TranslatedTextField(
                    fromText = fromText,
                    toText = toText,
                    fromLanguage = fromLanguage,
                    toLanguage = toLanguage,
                    onCopyClick = onCopyClick,
                    onCloseClick = onCloseClick,
...
) {
    val context = LocalContext.current

    Column(
        modifier = modifier
    ) {
        LanguageDisplay(uiLanguage = fromLanguage)
        Spacer(modifier = Modifier.height(16.dp))
        Text(
            text = fromText,
            color = MaterialTheme.colors.onSurface,
            modifier = Modifier.semantics {
                contentDescription = context.getString(R.string.original_text)
...
