...
            }
            item {
                val clipboardManager = LocalClipboardManager.current
                val keyboardController = LocalSoftwareKeyboardController.current
                val textToSpeech = rememberTextToSpeech()

                TranslateTextField(
                    fromText = state.fromText,
                    toText = state.toText,
                    isTranslating = state.isTranslating,
                    fromLanguage = state.fromLanguage,
                    toLanguage = state.toLanguage,
                    onTranslateClick = {
...
                        text = stringResource(id = R.string.history),
                        style = MaterialTheme.typography.h2
                    )
                }
            }
            items(state.history) { item ->
                TranslateHistoryItem(
                    uiHistoryItem = item,
                    onClick = {
                        viewModel.onEvent(event = TranslateEvent.SelectHistoryItem(item))
                    },
                    modifier = Modifier
                        .fillMaxWidth()
...
